--- a/index.html
+++ b/index.html
@@ -31,90 +31,122 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="section">
-        <h2>Über mich</h2>
-        <div class="about-grid">
-            <div class="about-text glass-card">
-                <h3>Hi, ich bin Kingsepp</h3>
-                <p>Als erfahrener Softwareentwickler und Cloud-Consultant helfe ich Unternehmen dabei, ihre IT-Infrastruktur zu modernisieren und für die digitale Zukunft zu rüsten.</p>
-                <p>Mit tiefgreifender Expertise in Cloud-Technologien, DevOps und modernen Entwicklungspraktiken bringe ich Ihre Projekte erfolgreich voran.</p>
-                <p><strong>GitHub:</strong> <a href="https://github.com/Kingsepp" style="color: #3b82f6;">github.com/Kingsepp</a></p>
-            </div>
-            <div class="about-stats">
-                <div class="stat-card">
-                    <div class="stat-number">5+</div>
-                    <div class="stat-label">Jahre Erfahrung</div>
+    <section id="about" class="section-block alt-bg">
+        <div class="container">
+            <h2 class="section-title">Über mich</h2>
+            <div class="grid-2">
+                <!-- Linke Spalte: Text-Card -->
+                <div class="card">
+                    <h3>Hi, ich bin Kingsepp</h3>
+                    <p>Als erfahrener Softwareentwickler und Cloud-Consultant helfe ich Unternehmen dabei, ihre IT-Infrastruktur zu modernisieren und für die digitale Zukunft zu rüsten.</p>
+                    <p>Mit tiefgreifender Expertise in Cloud-Technologien, DevOps und modernen Entwicklungspraktiken bringe ich Ihre Projekte erfolgreich voran.</p>
+                    <p>
+                        <strong>GitHub:</strong>
+                        <a href="https://github.com/Kingsepp" target="_blank">github.com/Kingsepp</a>
+                    </p>
                 </div>
-                <div class="stat-card">
-                    <div class="stat-number">50+</div>
-                    <div class="stat-label">Projekte</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-number">AWS</div>
-                    <div class="stat-label">Zertifiziert</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-number">24/7</div>
-                    <div class="stat-label">Support</div>
+                <!-- Rechte Spalte: Statistikliste -->
+                <div class="card">
+                    <ul class="list-check">
+                        <li><strong>5+</strong> Jahre Erfahrung</li>
+                        <li><strong>50+</strong> abgeschlossene Projekte</li>
+                        <li><strong>AWS</strong> Zertifiziert</li>
+                        <li><strong>24/7</strong> Support</li>
+                    </ul>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Services Section -->
-    <section id="services" class="section">
-        <h2>Meine Kernkompetenzen</h2>
-        <div class="services-grid">
-            <div class="service-card">
-                <div class="service-icon">☁️</div>
-                <h3>Cloud-Architekturen</h3>
-                <p>Beratung und Planung von skalierbaren Cloud-Lösungen auf AWS und Azure. Von der Konzeption bis zur Implementierung.</p>
-            </div>
-            <div class="service-card">
-                <div class="service-icon">⚡</div>
-                <h3>Migration & Modernisierung</h3>
-                <p>Sichere Migration bestehender Systeme in die Cloud und Modernisierung veralteter IT-Infrastrukturen.</p>
-            </div>
-            <div class="service-card">
-                <div class="service-icon">🔄</div>
-                <h3>DevOps-Optimierung</h3>
-                <p>Implementierung agiler Entwicklungsprozesse, CI/CD-Pipelines und automatisierter Deployment-Strategien.</p>
-            </div>
-            <div class="service-card">
-                <div class="service-icon">🔒</div>
-                <h3>IT-Sicherheit</h3>
-                <p>Comprehensive Sicherheitskonzepte und Compliance-Lösungen nach höchsten industriellen Standards.</p>
-            </div>
+    <section id="services" class="section-block">
+      <div class="container">
+        <h2 class="section-title">Meine Kernkompetenzen</h2>
+        <div class="grid-2">
+          <div class="card">
+            <h3>Cloud-Architekturen</h3>
+            <p>
+              Beratung und Planung von skalierbaren Cloud-Lösungen auf AWS und
+              Azure. Von der Konzeption bis zur Implementierung.
+            </p>
+          </div>
+          <div class="card">
+            <h3>Migration &amp; Modernisierung</h3>
+            <p>
+              Sichere Migration bestehender Systeme in die Cloud und
+              Modernisierung veralteter IT-Infrastrukturen.
+            </p>
+          </div>
+          <div class="card">
+            <h3>DevOps-Optimierung</h3>
+            <p>
+              Implementierung agiler Entwicklungsprozesse, CI/CD-Pipelines und
+              automatisierter Deployment-Strategien.
+            </p>
+          </div>
+          <div class="card">
+            <h3>IT-Sicherheit</h3>
+            <p>
+              Umfassende Sicherheitskonzepte und Compliance-Lösungen nach höchsten
+              industriellen Standards.
+            </p>
+          </div>
         </div>
+      </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="section">
-        <h2>Kontakt</h2>
-        <div class="contact-form">
-            <p style="text-align: center; margin-bottom: 2rem; color: #cbd5e1;">
-                Bereit für Ihr nächstes Cloud-Projekt? Lassen Sie uns sprechen!
-            </p>
-            <form action="https://formspree.io/f/DEINE_FORM_ID" method="POST">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">E-Mail</label>
-                    <input type="email" id="email" name="_replyto" required>
-                </div>
-                <div class="form-group">
-                    <label for="company">Unternehmen (optional)</label>
-                    <input type="text" id="company" name="company">
-                </div>
-                <div class="form-group">
-                    <label for="message">Projektbeschreibung</label>
-                    <textarea id="message" name="message" rows="5" required placeholder="Erzählen Sie mir von Ihrem Projekt..."></textarea>
-                </div>
-                <button type="submit" class="submit-button">Nachricht senden</button>
-            </form>
+    <section id="contact" class="section-block alt-bg">
+      <div class="container">
+        <h2 class="section-title">Kontakt</h2>
+        <div class="card">
+          <p style="text-align: center; margin-bottom: 2rem; color: var(--color-text);">
+            Bereit für Ihr nächstes Cloud-Projekt? Lassen Sie uns sprechen!
+          </p>
+          <form action="https://formspree.io/f/DEINE_FORM_ID" method="POST">
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="Ihr Name"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <label for="email">E-Mail</label>
+              <input
+                type="email"
+                id="email"
+                name="_replyto"
+                placeholder="Ihre E-Mail-Adresse"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <label for="company">Unternehmen (optional)</label>
+              <input
+                type="text"
+                id="company"
+                name="company"
+                placeholder="Firmenname"
+              />
+            </div>
+            <div class="form-group">
+              <label for="message">Projektbeschreibung</label>
+              <textarea
+                id="message"
+                name="message"
+                rows="5"
+                placeholder="Erzählen Sie mir von Ihrem Projekt..."
+                required
+              ></textarea>
+            </div>
+            <button type="submit" class="btn-submit">Nachricht senden</button>
+          </form>
         </div>
+      </div>
     </section>
 
     <!-- Footer -->
