--- a/about.html
+++ b/about.html
@@ -51,8 +51,8 @@ description: Thomas Kingsepp - Cloud Developer & Project Manager aus München. S
       <div class="expertise-item">
         <h4><span class="prompt-symbol">></span> Workflow-Automatisierung</h4>
         <p>
-          CI/CD-Pipelines, GitOps-Workflows und automatisierte Testing-Strategien. Effizienzsteigerung
-          durch intelligente Automatisierung.
+          CI/CD-Pipelines, GitOps-Workflows und automatisierte Testing-Strategien.
+          Effizienzsteigerung durch intelligente Automatisierung.
         </p>
       </div>
 
@@ -67,8 +67,8 @@ description: Thomas Kingsepp - Cloud Developer & Project Manager aus München. S
       <div class="expertise-item">
         <h4><span class="prompt-symbol">></span> Project Management</h4>
         <p>
-          Leitung von agilen und klassischen Projekten. Stakeholder-Management, Ressourcenplanung und
-          Risikomanagement in komplexen technischen Umgebungen.
+          Leitung von agilen und klassischen Projekten. Stakeholder-Management, Ressourcenplanung
+          und Risikomanagement in komplexen technischen Umgebungen.
         </p>
       </div>
     </div>
@@ -122,8 +122,8 @@ description: Thomas Kingsepp - Cloud Developer & Project Manager aus München. S
   <div class="about-section">
     <h3>Aktueller Fokus</h3>
     <p>
-      Derzeit arbeite ich an <strong>ai4mbse</strong>, einem Forschungsprojekt zur Integration von KI
-      in Model-Based Systems Engineering. Das Projekt erforscht, wie Large Language Models
+      Derzeit arbeite ich an <strong>ai4mbse</strong>, einem Forschungsprojekt zur Integration von
+      KI in Model-Based Systems Engineering. Das Projekt erforscht, wie Large Language Models
       Engineering-Prozesse automatisieren und verbessern können.
     </p>
     <p>
