refactor(security): enable Strict Mode for Turnstile

--- a/about.html
+++ b/about.html
@@ -80,8 +80,8 @@ description: Thomas Kingsepp - Cloud Developer & Project Manager aus München. S
         <div class="expertise-item">
           <h4><span class="prompt-symbol">></span> AI & MBSE</h4>
           <p>
-            Forschung im Bereich AI-gestütztes Model-Based Systems Engineering. Integration von Large
-            Language Models in Engineering-Workflows.
+            Forschung im Bereich AI-gestütztes Model-Based Systems Engineering. Integration von
+            Large Language Models in Engineering-Workflows.
           </p>
         </div>
 
