fix(pages): make Turnstile wrapper visible by default, remove duplicate scripts
- REMOVED `display: none` from protection divs in projects.html/about.html
  to ensure widget renders properly.
- REMOVED duplicate Turnstile script tags (now loaded globally in default.html).
- KEPT content hidden by default (`display: none`) to ensure protection works.

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ permalink: /about/
 description: Thomas Kingsepp - Cloud Developer & Project Manager aus München. Spezialisiert auf Cloud-native Development, AI4MBSE und moderne Softwarearchitekturen.
 ---
 
-<div id="about-turnstile-protection" style="display: none">
+<div id="about-turnstile-protection">
   <div style="text-align: center; padding: 4rem 2rem; max-width: 600px; margin: 0 auto">
     <h2 style="color: var(--accent-color); margin-bottom: 2rem">
       <span class="prompt-symbol" style="opacity: 0.7">$</span> Verifizierung erforderlich
@@ -80,8 +80,8 @@ description: Thomas Kingsepp - Cloud Developer & Project Manager aus München. S
         <div class="expertise-item">
           <h4><span class="prompt-symbol">></span> AI & MBSE</h4>
           <p>
-            Forschung im Bereich AI-gestütztes Model-Based Systems Engineering. Integration von
-            Large Language Models in Engineering-Workflows.
+            Forschung im Bereich AI-gestütztes Model-Based Systems Engineering. Integration von Large
+            Language Models in Engineering-Workflows.
           </p>
         </div>
 
@@ -190,5 +190,3 @@ description: Thomas Kingsepp - Cloud Developer & Project Manager aus München. S
     </p>
   </section>
 </div>
-
-<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
