--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ typing_effect: true
       id="main-turnstile-widget"
       class="cf-turnstile"
       data-sitekey="0x4AAAAAABhCvPtIE3gog0lZ"
-      data-callback="onTurnstileSuccess"
-      data-error-callback="onTurnstileError"
+      data-callback="onMainPageTurnstileSuccess"
+      data-error-callback="onMainPageTurnstileError"
       data-theme="light"
       style="display: inline-block"
     ></div>
@@ -50,7 +50,7 @@ typing_effect: true
     <article class="project-card">
       <div class="project-header">
         <h3>
-          <a href="{{ '/projects/ai4mbse' | relative_url }}" class="project-title">ai4mbse</a>
+          <a href="{{ '/ai4mbse' | relative_url }}" class="project-title">ai4mbse</a>
         </h3>
         <span class="project-status">[ active ]</span>
       </div>
@@ -64,7 +64,7 @@ typing_effect: true
         <span class="tag">SysML v2</span>
       </div>
       <div class="project-links">
-        <a href="{{ '/projects/ai4mbse' | relative_url }}" class="project-link"
+        <a href="{{ '/ai4mbse' | relative_url }}" class="project-link"
           >Details <span class="arrow">→</span></a
         >
         <a
@@ -80,7 +80,7 @@ typing_effect: true
     <article class="project-card">
       <div class="project-header">
         <h3>
-          <a href="{{ '/projects/portfolio' | relative_url }}" class="project-title"
+          <a href="{{ '/projects' | relative_url }}" class="project-title"
             >kingsepp.dev</a
           >
         </h3>
@@ -106,17 +106,4 @@ typing_effect: true
       </div>
     </article>
   </section>
-
-  <section class="cta">
-    <p class="cta-text">
-      <span class="prompt-symbol">$</span> Mehr Projekte?
-      <a href="{{ '/projects' | relative_url }}">projects.list()</a>
-    </p>
-    <p class="cta-text">
-      <span class="prompt-symbol">$</span> Kontakt aufnehmen?
-      <a href="{{ '/about' | relative_url }}">about.contact()</a>
-    </p>
-  </section>
 </div>
-
-<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
