--- a/index.html
+++ b/index.html
@@ -80,9 +80,7 @@ typing_effect: true
     <article class="project-card">
       <div class="project-header">
         <h3>
-          <a href="{{ '/projects' | relative_url }}" class="project-title"
-            >kingsepp.dev</a
-          >
+          <a href="{{ '/projects' | relative_url }}" class="project-title">kingsepp.dev</a>
         </h3>
         <span class="project-status">[ active ]</span>
       </div>
